Evolog Modules: Fix bugs where module definitions do not get passed on. Add very simple end2end test with module-based 3-coloring implementation.